--- a/iStoreFX/src/main/resources/com/example/istorefx/UpdateEmployee.fxml
+++ b/iStoreFX/src/main/resources/com/example/istorefx/UpdateEmployee.fxml
@@ -13,11 +13,11 @@
          <children>
             <AnchorPane layoutX="-2.0" prefHeight="106.0" prefWidth="604.0" style="-fx-background-color: #E7ECEF;">
                <children>
-                  <Button fx:id="_backButton" mnemonicParsing="false" onAction="#Back" prefHeight="106.0" prefWidth="114.0" text="Back" />
+                  <Button fx:id="_backButton" layoutX="27.0" layoutY="40.0" mnemonicParsing="false" onAction="#Back" prefHeight="26.0" prefWidth="135.0" style="-fx-background-color: #A3CEF1; -fx-border-color: #274C77; -fx-background-radius: 5; -fx-border-radius: 5;" text="&lt; Back to dashboard" />
                </children></AnchorPane>
-            <AnchorPane layoutX="2.0" layoutY="105.0" onDragDetected="#DeleteAccount" prefHeight="466.0" prefWidth="598.0">
+            <AnchorPane layoutX="2.0" layoutY="105.0" onDragDetected="#DeleteAccount" prefHeight="466.0" prefWidth="598.0" style="-fx-background-color: #ffffff;">
                <children>
-                  <Label contentDisplay="CENTER" layoutX="14.0" layoutY="9.0" prefHeight="52.0" prefWidth="221.0" text="Update User">
+                  <Label contentDisplay="CENTER" layoutX="14.0" layoutY="9.0" prefHeight="52.0" prefWidth="221.0" style="-fx-font-weight: bold;" text="Update User">
                      <font>
                         <Font size="24.0" />
                      </font>
@@ -27,7 +27,7 @@
                         <Font size="16.0" />
                      </font>
                   </Label>
-                  <Button alignment="CENTER" contentDisplay="CENTER" layoutX="202.0" layoutY="372.0" mnemonicParsing="false" onAction="#DeleteAccount" prefHeight="40.0" prefWidth="194.0" text="Delete account" textAlignment="CENTER" textFill="RED">
+                  <Button alignment="CENTER" contentDisplay="CENTER" layoutX="202.0" layoutY="372.0" mnemonicParsing="false" onAction="#DeleteAccount" prefHeight="40.0" prefWidth="194.0" style="-fx-background-color: #ffffff; -fx-background-radius: 5; -fx-border-width: 2; -fx-border-radius: 5; -fx-border-color: FF9494;" text="Delete account" textAlignment="CENTER" textFill="#ff9494">
                      <font>
                         <Font size="18.0" />
                      </font>
@@ -57,17 +57,17 @@
                         <Font size="16.0" />
                      </font>
                   </Label>
-                  <Button alignment="CENTER" contentDisplay="CENTER" layoutX="405.0" layoutY="92.0" mnemonicParsing="false" onAction="#DisplayUpdateNicknamePane" prefHeight="40.0" prefWidth="176.0" text="Update username" textAlignment="CENTER">
+                  <Button alignment="CENTER" contentDisplay="CENTER" layoutX="405.0" layoutY="92.0" mnemonicParsing="false" onAction="#DisplayUpdateNicknamePane" prefHeight="40.0" prefWidth="176.0" style="-fx-border-color: #A3CEF1; -fx-border-radius: 5; -fx-border-width: 2; -fx-background-radius: 5; -fx-background-color: #ffffff;" text="Update username" textAlignment="CENTER">
                      <font>
                         <Font size="16.0" />
                      </font>
                   </Button>
-                  <Button alignment="CENTER" contentDisplay="CENTER" layoutX="405.0" layoutY="170.0" mnemonicParsing="false" onAction="#DisplayUpdateEmailPane" prefHeight="40.0" prefWidth="176.0" text="Update email" textAlignment="CENTER">
+                  <Button alignment="CENTER" contentDisplay="CENTER" layoutX="405.0" layoutY="170.0" mnemonicParsing="false" onAction="#DisplayUpdateEmailPane" prefHeight="40.0" prefWidth="176.0" style="-fx-border-color: #A3CEF1; -fx-background-radius: 5; -fx-border-radius: 5; -fx-border-width: 2; -fx-background-color: #ffffff;" text="Update email" textAlignment="CENTER">
                      <font>
                         <Font size="16.0" />
                      </font>
                   </Button>
-                  <Button alignment="CENTER" contentDisplay="CENTER" layoutX="200.0" layoutY="309.0" mnemonicParsing="false" onAction="#DisplayUpdatePasswordPane" prefHeight="40.0" prefWidth="194.0" text="Update password" textAlignment="CENTER">
+                  <Button alignment="CENTER" contentDisplay="CENTER" layoutX="200.0" layoutY="309.0" mnemonicParsing="false" onAction="#DisplayUpdatePasswordPane" prefHeight="40.0" prefWidth="194.0" style="-fx-background-radius: 5; -fx-border-color: #A3CEF1; -fx-border-radius: 5; -fx-border-width: 2; -fx-background-color: #ffffff;" text="Update password" textAlignment="CENTER">
                      <font>
                         <Font size="16.0" />
                      </font>
@@ -113,7 +113,7 @@
                         <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#CloseUpdatePasswordPane" prefHeight="15.0" prefWidth="58.0" text="Close" />
                      </children>
                   </AnchorPane>
-                  <Button alignment="CENTER" contentDisplay="CENTER" layoutX="405.0" layoutY="240.0" mnemonicParsing="false" onAction="#DisplayRoleChoiceBox" prefHeight="40.0" prefWidth="176.0" text="Update role" textAlignment="CENTER">
+                  <Button alignment="CENTER" contentDisplay="CENTER" layoutX="405.0" layoutY="240.0" mnemonicParsing="false" onAction="#DisplayRoleChoiceBox" prefHeight="40.0" prefWidth="176.0" style="-fx-border-color: #A3CEF1; -fx-border-radius: 5; -fx-background-radius: 5; -fx-border-width: 2; -fx-background-color: #ffffff;" text="Update role" textAlignment="CENTER">
                      <font>
                         <Font size="16.0" />
                      </font>
