--- a/iStoreFX/src/main/resources/com/example/istorefx/UpdateEmployee.fxml
+++ b/iStoreFX/src/main/resources/com/example/istorefx/UpdateEmployee.fxml
@@ -67,16 +67,12 @@
                         <Font size="16.0" />
                      </font>
                   </Button>
-
-                  <Button alignment="CENTER" contentDisplay="CENTER" layoutX="405.0" layoutY="240.0" mnemonicParsing="false" onAction="#DisplayRoleChoiceBox" prefHeight="40.0" prefWidth="176.0" text="Update role" textAlignment="CENTER">
+                  <Button alignment="CENTER" contentDisplay="CENTER" layoutX="200.0" layoutY="309.0" mnemonicParsing="false" onAction="#DisplayUpdatePasswordPane" prefHeight="40.0" prefWidth="194.0" style="-fx-background-radius: 5; -fx-border-color: #A3CEF1; -fx-border-radius: 5; -fx-border-width: 2; -fx-background-color: #ffffff;" text="Update password" textAlignment="CENTER">
                      <font>
                         <Font size="16.0" />
                      </font>
                   </Button>
-                  <Button alignment="CENTER" contentDisplay="CENTER" layoutX="200.0" layoutY="309.0" mnemonicParsing="false" onAction="#DisplayUpdatePasswordPane" prefHeight="40.0" prefWidth="194.0" text="Update password" textAlignment="CENTER">
-
-                  <Button alignment="CENTER" contentDisplay="CENTER" layoutX="200.0" layoutY="309.0" mnemonicParsing="false" onAction="#DisplayUpdatePasswordPane" prefHeight="40.0" prefWidth="194.0" style="-fx-background-radius: 5; -fx-border-color: #A3CEF1; -fx-border-radius: 5; -fx-border-width: 2; -fx-background-color: #ffffff;" text="Update password" textAlignment="CENTER">
-
+                  <Button alignment="CENTER" contentDisplay="CENTER" layoutX="405.0" layoutY="240.0" mnemonicParsing="false" onAction="#DisplayRoleChoiceBox" prefHeight="40.0" prefWidth="176.0" style="-fx-border-color: #A3CEF1; -fx-border-radius: 5; -fx-background-radius: 5; -fx-border-width: 2; -fx-background-color: #ffffff;" text="Update role" textAlignment="CENTER">
                      <font>
                         <Font size="16.0" />
                      </font>
@@ -122,7 +118,6 @@
                         <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#CloseUpdatePasswordPane" prefHeight="15.0" prefWidth="58.0" text="Close" />
                      </children>
                   </AnchorPane>
-
                </children>
             </AnchorPane>
             <AnchorPane layoutX="-2.0" layoutY="572.0" prefHeight="54.0" prefWidth="604.0" style="-fx-background-color: #274C77;">
